--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,11 @@ environment:
     secure: qK/vt4/ihLipeamB7l+Dng==
 
 install:
+  # TODO remove when .NET 5 is RTM
+  - nuget update -self
+  - ps: "wget https://dot.net/v1/dotnet-install.ps1 -o dotnet-install.ps1"
+  - ps: "& .\\dotnet-install.ps1 -Version 5.0.100-preview.7.20366.6 -InstallDir $env:ProgramFiles\\dotnet"
+
   - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion -Verbosity quiet && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
   - nuget install -Verbosity quiet -ExcludeVersion -OutputDirectory . OpenCover
   - pip install -q codecov
@@ -57,6 +62,13 @@ test_script:
     -output:coverage_netcore3.xml
 
   - >-
+    OpenCover\tools\OpenCover.Console -returntargetcode -register:user -oldstyle
+    -target:dotnet.exe
+    -targetargs:"vstest net\DevExtreme.AspNet.Data.Tests.EFCore5\bin\Debug\net5\DevExtreme.AspNet.Data.Tests.EFCore5.dll"
+    -filter:"+[DevExtreme*]* -[DevExtreme.AspNet.Data.Tests]* -[DevExtreme.AspNet.Data.Tests.*]*"
+    -output:coverage_net5.xml
+
+  - >-
     OpenCover\tools\OpenCover.Console -returntargetcode -register:Path64
     -target:%xunit20%\xunit.console.exe
     -targetargs:"
@@ -74,7 +86,7 @@ after_test:
   - if defined RELEASE_KEY_SECRET dotnet pack net\DevExtreme.AspNet.Data --configuration=Release
 
 on_success:
-  - codecov -X gcov -f coverage_netcore.xml coverage_netcore3.xml coverage_netfx.xml js-test/coverage/lcov.info
+  - codecov -X gcov -f coverage_netcore.xml coverage_netcore3.xml coverage_net5.xml coverage_netfx.xml js-test/coverage/lcov.info
 
 artifacts:
   - path: net\DevExtreme.AspNet.Data\bin\Release\*.nupkg
