--- a/net/NuGet.Config
+++ b/net/NuGet.Config
@@ -5,5 +5,7 @@
   </config>
   <packageSources>
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <!-- TODO remove when .NET 5 is RTM -->
+    <add key="dotnet-nightly" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet5/nuget/v3/index.json" />
   </packageSources>
 </configuration>
