--- a/net/DevExtreme.AspNet.Data.Tests.NET4/packages.config
+++ b/net/DevExtreme.AspNet.Data.Tests.NET4/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MongoDB.Bson" version="2.11.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="System.Linq.Dynamic.Core" version="1.0.10" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
