--- a/net/Sample/Sample.csproj
+++ b/net/Sample/Sample.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\DevExtreme.AspNet.Data\DevExtreme.AspNet.Data.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
   </ItemGroup>
 
   <Target Name="Clean dx-aspnet-data-js" BeforeTargets="LibraryManagerRestore">
