--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ install:
 
   - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion -Verbosity quiet && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
   - nuget install -Verbosity quiet -ExcludeVersion -OutputDirectory . OpenCover
-  - pip install -q codecov
+  - c:\Python38\python -m pip install -q codecov
   - node build/make-nojquery
   - node build/replace-meta "%APPVEYOR_BUILD_NUMBER%" "%APPVEYOR_REPO_TAG_NAME%" "%APPVEYOR_REPO_NAME%"
   - npm install
@@ -44,11 +44,11 @@ test_script:
     OpenCover\tools\OpenCover.Console -returntargetcode -register:user -oldstyle
     -target:dotnet.exe
     -targetargs:"vstest
-    net\DevExtreme.AspNet.Data.Tests\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.dll
-    net\DevExtreme.AspNet.Data.Tests.EFCore1\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.EFCore1.dll
-    net\DevExtreme.AspNet.Data.Tests.EFCore2\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.EFCore2.dll
-    net\DevExtreme.AspNet.Data.Tests.NH\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.NH.dll
-    net\DevExtreme.AspNet.Data.Tests.Xpo\bin\Debug\netcoreapp2.0\DevExtreme.AspNet.Data.Tests.Xpo.dll
+    net\DevExtreme.AspNet.Data.Tests\bin\Debug\netcoreapp2.1\DevExtreme.AspNet.Data.Tests.dll
+    net\DevExtreme.AspNet.Data.Tests.EFCore1\bin\Debug\netcoreapp2.1\DevExtreme.AspNet.Data.Tests.EFCore1.dll
+    net\DevExtreme.AspNet.Data.Tests.EFCore2\bin\Debug\netcoreapp2.1\DevExtreme.AspNet.Data.Tests.EFCore2.dll
+    net\DevExtreme.AspNet.Data.Tests.NH\bin\Debug\netcoreapp2.1\DevExtreme.AspNet.Data.Tests.NH.dll
+    net\DevExtreme.AspNet.Data.Tests.Xpo\bin\Debug\netcoreapp2.1\DevExtreme.AspNet.Data.Tests.Xpo.dll
     "
     -filter:"+[DevExtreme*]* -[DevExtreme.AspNet.Data.Tests]* -[DevExtreme.AspNet.Data.Tests.*]*"
     -output:coverage_netcore.xml
@@ -87,7 +87,7 @@ after_test:
   - if defined RELEASE_KEY_SECRET dotnet pack net\DevExtreme.AspNet.Data --configuration=Release
 
 on_success:
-  - codecov -X gcov -f coverage_netcore.xml coverage_netcore3.xml coverage_net5.xml coverage_netfx.xml js-test/coverage/lcov.info
+  - c:\Python38\Scripts\codecov -X gcov -f coverage_netcore.xml coverage_netcore3.xml coverage_net5.xml coverage_netfx.xml js-test/coverage/lcov.info
 
 artifacts:
   - path: net\DevExtreme.AspNet.Data\bin\Release\*.nupkg
