--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,7 @@
 root = true
 
 [*]
+end_of_line = crlf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
@@ -9,8 +10,12 @@ indent_size = 4
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{json,yml}]
+[*.{json,yml,ecrc}]
 indent_size = 2
+
+[*.{[Cc]onfig,csproj,sln}]
+indent_size = unset
+insert_final_newline = unset
 
 [*.cs]
 csharp_new_line_before_open_brace = none
