--- a/net/DevExtreme.AspNet.Data.Tests.EF6/packages.config
+++ b/net/DevExtreme.AspNet.Data.Tests.EF6/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="LinqKit.EntityFramework" version="1.1.9.0" targetFramework="net461" />
   <package id="System.Data.Common" version="4.1.0" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.1.0" targetFramework="net461" />
   <package id="xunit" version="2.4.1" targetFramework="net461" />
