--- a/net/DevExtreme.AspNet.Data.Tests.EFCore5/DevExtreme.AspNet.Data.Tests.EFCore5.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore5/DevExtreme.AspNet.Data.Tests.EFCore5.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="5.0.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
