--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "karma-coverage": "^1.1.1",
     "karma-qunit": "^2.0.0",
     "qunit": "^2.0.0",
-    "typescript": "^2.0.10",
+    "typescript": "^4.0.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.0.0",
     "xhr-mock": "^2.3.1"
   },
   "scripts": {
     "karma": "cd js-test && karma start",
-    "karma-bundled": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT='../js/dx.aspnet.data.js' test.js -o test-bundle.js && karma start --bundled",
-    "karma-bundled-nojquery": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT='../js-nojquery/index.js' test.js -o test-bundle.js && karma start --bundled",
-    "karma-bundled-nojquery-cjs": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT='../js-nojquery/index.js' --define define=false test.js -o test-bundle.js && karma start --bundled",
+    "karma-bundled": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT=\\\"../js/dx.aspnet.data.js\\\" test.js -o test-bundle.js && karma start --bundled",
+    "karma-bundled-nojquery": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT=\\\"../js-nojquery/index.js\\\" test.js -o test-bundle.js && karma start --bundled",
+    "karma-bundled-nojquery-cjs": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT=\\\"../js-nojquery/index.js\\\" --define define=false test.js -o test-bundle.js && karma start --bundled",
     "dts": "cd js-test && tsc check-ts-compilation.ts && tsc check-ts-compilation.nojquery.ts",
     "eslint": "eslint ."
   }
