--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ concurrency:
 
 on:
   push:
+    branches-ignore:
+      - "dependabot/**"
+      - "renovate/**"
   pull_request:
   workflow_dispatch:
 
