--- a/net/DevExtreme.AspNet.Data.Tests.EFCore2/DevExtreme.AspNet.Data.Tests.EFCore2.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore2/DevExtreme.AspNet.Data.Tests.EFCore2.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <DefineConstants>EFCORE2</DefineConstants>
   </PropertyGroup>
 
