--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,13 +14,9 @@ name: "CodeQL"
 on:
   push:
     branches: [ "master" ]
-    paths-ignore:
-      - net/Sample/wwwroot/lib/**
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "master" ]
-    paths-ignore:
-      - net/Sample/wwwroot/lib/**
   schedule:
     - cron: '35 14 * * 1'
 
@@ -49,6 +45,7 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
+        config-file: ./.github/codeql/codeql-config.yml
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
