--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,8 +74,7 @@ jobs:
     - run: nuget install -Verbosity quiet -ExcludeVersion -OutputDirectory . -Version 2022.2.3 JetBrains.dotCover.CommandLineTools
 
     - run: cd net/Sample && npm i
-    - run: nuget restore net/DevExtreme.AspNet.Data.sln -Verbosity quiet
-    - run: dotnet build --no-restore net/DevExtreme.AspNet.Data.sln
+    - run: dotnet build net/DevExtreme.AspNet.Data.sln
 
     - run: JetBrains.dotCover.CommandLineTools\tools\dotCover cover --ReturnTargetExitCode --ReportType=DetailedXML --Filters="+:module=DevExtreme.AspNet.Data" --Output=coverage_dotnet.xml --TargetExecutable=net\dotnet-test-all.cmd
 
