--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "karma-qunit": "2.1.0",
     "qunit": "2.19.3",
     "typescript": "4.8.4",
-    "webpack": "4.46.0",
-    "webpack-cli": "3.3.12",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0",
     "xhr-mock": "2.5.1"
   },
   "scripts": {
     "karma": "cd js-test && karma start",
-    "karma-bundled": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT=\\\"../js/dx.aspnet.data.js\\\" test.js -o test-bundle.js && karma start --bundled",
-    "karma-bundled-nojquery": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT=\\\"../js-nojquery/index.js\\\" test.js -o test-bundle.js && karma start --bundled",
-    "karma-bundled-nojquery-cjs": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT=\\\"../js-nojquery/index.js\\\" --define define=false test.js -o test-bundle.js && karma start --bundled",
+    "karma-bundled": "cd js-test && webpack && karma start --bundled",
+    "karma-bundled-nojquery": "cd js-test && webpack --env NOJQUERY=true && karma start --bundled",
+    "karma-bundled-nojquery-cjs": "cd js-test && webpack --env NOJQUERY=true --env CJS=true && karma start --bundled",
     "dts": "cd js-test && tsc check-ts-compilation.ts && tsc check-ts-compilation.nojquery.ts",
     "eslint": "eslint ."
   }
