--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,6 +11,10 @@
 #
 name: "CodeQL"
 
+concurrency:
+  group: ${{github.workflow}}-${{github.event.pull_request.number || github.sha}}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ "master" ]
