--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
       - "renovate/**"
   pull_request:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 6'
 
 env:
   NPM_CONFIG_AUDIT: "false"
