--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,13 @@ jobs:
       RELEASE_KEY_SECRET: ${{ secrets.RELEASE_KEY_SECRET }}
 
     steps:
+    - uses: actions/setup-dotnet@v3
+      with:
+        dotnet-quality: ga
+        dotnet-version: |
+          3.1
+          6.0
+
     - uses: actions/checkout@v3
 
     - if: ${{ env.RELEASE_KEY_SECRET != '' }}
