--- a/net/DevExtreme.AspNet.Data/DevExtreme.AspNet.Data.csproj
+++ b/net/DevExtreme.AspNet.Data/DevExtreme.AspNet.Data.csproj
@@ -14,7 +14,7 @@
   <PropertyGroup>
     <AssemblyName>DevExtreme.AspNet.Data</AssemblyName>
     <AssemblyVersion>99.0</AssemblyVersion>
-    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net452;net6.0</TargetFrameworks>
     <DebugType>full</DebugType>
     <DocumentationFile>bin\Debug\$(TargetFramework)\DevExtreme.AspNet.Data.xml</DocumentationFile>
     <NoWarn>1591</NoWarn>
@@ -28,7 +28,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
     <PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
   </ItemGroup>
 
