--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,9 +91,7 @@ jobs:
     - uses: actions/setup-dotnet@v3
       with:
         dotnet-quality: ga
-        dotnet-version: |
-          3.1
-          6.0
+        dotnet-version: 6.0
 
     - uses: actions/checkout@v3
 
