--- a/net/DevExtreme.AspNet.Data.Tests.NET4/DevExtreme.AspNet.Data.Tests.NET4.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.NET4/DevExtreme.AspNet.Data.Tests.NET4.csproj
@@ -4,13 +4,15 @@
     <TargetFramework>net472</TargetFramework>
     <RootNamespace>DevExtreme.AspNet.Data.Tests</RootNamespace>
     <AssemblyName>DevExtreme.AspNet.Data.Tests</AssemblyName>
-    <DefineConstants>NET4</DefineConstants>
+    <DefineConstants>NET4;NEWTONSOFT_TESTS</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Web.Extensions" />
+
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.3" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
