--- a/net/DevExtreme.AspNet.Data/DevExtreme.AspNet.Data.csproj
+++ b/net/DevExtreme.AspNet.Data/DevExtreme.AspNet.Data.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.12</Version>
+    <Version>1.14</Version>
     <PackageId>DXAutomap.AspNet.Data</PackageId>
     <Description>DevExtreme data layer extension for ASP.NET supporting Automapper</Description>
     <Authors>Devexpress_Statler</Authors>
@@ -12,11 +12,12 @@
 
   <PropertyGroup>
     <AssemblyName>DXAutomap.AspNet.Data</AssemblyName>
-    <AssemblyVersion>1.12</AssemblyVersion>
+    <AssemblyVersion>1.14</AssemblyVersion>
     <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <DebugType>full</DebugType>
     <DocumentationFile>bin\Debug\$(TargetFramework)\DevExtreme.AspNet.Data.xml</DocumentationFile>
     <NoWarn>1591</NoWarn>
+    <FileVersion>1.14.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
