--- a/net/Sample/package.json
+++ b/net/Sample/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample",
   "dependencies": {
-    "devextreme": "~22.1.0",
-    "jquery": "^3.6.1"
+    "devextreme-dist": "~23.2.0",
+    "jquery": "^3.7.1"
   }
 }
