--- a/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
@@ -7,9 +7,9 @@
   <ItemGroup>
     <Reference Include="System.Data.Linq" />
 
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+    <PackageReference Include="System.Data.SqlClient" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio" />
 
     <ProjectReference Include="..\DevExtreme.AspNet.Data\DevExtreme.AspNet.Data.csproj" />
     <ProjectReference Include="..\DevExtreme.AspNet.Data.Tests.Common\DevExtreme.AspNet.Data.Tests.Common.csproj" />
