--- a/net/DevExtreme.AspNet.Data.Tests.EFCore6/DevExtreme.AspNet.Data.Tests.EFCore6.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore6/DevExtreme.AspNet.Data.Tests.EFCore6.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="6.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.12" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" VersionOverride="6.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="6.0.12" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
 
   <ItemGroup>
