migrate to net462 / net8, bump / remove csproj(s) for outdated targets / ef core versions (https://learn.microsoft.com/en-us/ef/core/what-is-new/release-planning - out of support + < net8)

--- a/net/Sample/Sample.csproj
+++ b/net/Sample/Sample.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" />
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
   </ItemGroup>
 
   <Target Name="Clean dx-aspnet-data-js" BeforeTargets="LibraryManagerRestore">
