--- a/net/DevExtreme.AspNet.Data.Tests.EFCore8/DevExtreme.AspNet.Data.Tests.EFCore8.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore8/DevExtreme.AspNet.Data.Tests.EFCore8.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" VersionOverride="6.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="8.0.0" />
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
