--- a/net/DevExtreme.AspNet.Data.Tests.EFCore9/DevExtreme.AspNet.Data.Tests.EFCore9.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore9/DevExtreme.AspNet.Data.Tests.EFCore9.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" VersionOverride="6.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="9.0.0-preview.2.24128.4" />
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" VersionOverride="9.0.0-preview.7.24405.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
