DevExtreme.AspNet.Data.Tests.EFCore10

--- a/.github/actions/dotnet-test-build/action.yml
+++ b/.github/actions/dotnet-test-build/action.yml
@@ -8,7 +8,9 @@ runs:
   - uses: actions/setup-dotnet@v4
     with:
       dotnet-quality: ga
-      dotnet-version: 9.0
+      dotnet-version: |
+        9.0
+        10.0.x
 
   - uses: actions/cache@v4
     with:
